3.0.3
=====

3.0.2
=====
- Updated SLF4j dependency to 1.7.25.
- Added "Automatic-Module-Name: thymeleaf-extras-java8time" to MANIFEST.MF for Java 9+ JPMS.
- Adapted expected test results to formatting rules of Java 11 LTS.
- Fixed issue
https://github.com/thymeleaf/thymeleaf-extras-java8time/issues/17 regarding
formatting with custom patterns
- Allowing SHORT, MEDIUM, LONG and FULL as pattern values to use the java.time.format.FormatStyle patterns
- Localised formatters for OffsetDateTime and YearMonth classes

3.0.1
=====
- Normalisation of null-safety: make #temporals return null for null input, instead of throwing exception.

3.0.0
=====
- Adapted extension to the new APIs in Thymeleaf 3

2.1.1
=====
- Support for specific formatting of LocalDate, LocalDateTime, ZonedDateTime, Instant, LocalTime,
  OffsetTime, OffsetDateTime, Year and YearMonth.

2.1.0
=====
- First release of the Java 8 Dialect